--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,13 +12,14 @@
   z-index: 1;
 }
 
-.wave {
+/* .wave {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   background: url(wave.png);
+  object-fit: cover;
   background-size: 1000px 100px;
 }
 
@@ -72,7 +73,7 @@ wave3 {
   100% {
     background-position-x: -1000px;
   }
-}
+} */
 
 .nav-btn {
   border: 4px solid #07031a;
