--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,19 +65,21 @@
       </div>
 
     </div>
+    <!-- <div class="container-fluid">
+      <div class="wave wave1">
 
-    <div class="wave wave1">
+      </div>
+      <div class="wave wave2">
 
+      </div>
+      <div class="wave wave3">
+
+      </div>
+      <div class="wave wave4">
+
+      </div> -->
     </div>
-    <div class="wave wave2">
 
-    </div>
-    <div class="wave wave3">
-
-    </div>
-    <div class="wave wave4">
-
-    </div>
   </section>
   <section id="section-2">
     <div class="section-container">
@@ -92,10 +94,10 @@
             <input type="password" name="password" placeholder="Password" required="" class="login-input">
             <button type="submit" class="hover-button">Sign up</button>
           </form>
-          <div class="container-fluid" style= "margin-top: 2rem;line-height:3;text-align:center">
-            <a  class="btn btn-danger btn-md" href="/auth/google" role = "button"><i class="fab fa-google"></i> &nbsp Sign up with <b>Google</b></a>
+          <div class="container-fluid" style="margin-top: 2rem;line-height:3;text-align:center">
+            <a class="btn btn-danger btn-md" href="/auth/google" role="button"><i class="fab fa-google"></i> &nbsp Sign up with <b>Google</b></a>
             <a href="/auth/github" class="btn btn-dark btn-md"><i class="fab fa-github"></i> &nbspSign up with <b>Github</b></a>
-            <a href="/auth/outlook" class="btn btn-primary btn-md " ><img src="https://img.icons8.com/color/24/000000/microsoft-outlook-2019--v2.png"/ > &nbsp Sign in with <b>Outlook</b></a>
+            <a href="/auth/outlook" class="btn btn-primary btn-md "><img src="https://img.icons8.com/color/24/000000/microsoft-outlook-2019--v2.png" /> &nbsp Sign in with <b>Outlook</b></a>
           </div>
         </div>
 
@@ -106,9 +108,9 @@
             <input type="password" name="password" placeholder="Password" required="" class="login-input">
             <button type="submit" class="hover-button">Login</button>
           </form>
-          <div class="container-fluid" style= "line-height:3">
+          <div class="container-fluid" style="line-height:3">
             <a href="/auth/google" class="btn btn-outline-danger btn-block"><i class="fab fa-google"></i> &nbsp Sign in with <b>Google</b></a>
-            <a href="/auth/outlook" class="btn btn-outline-primary btn-block " ><img src="https://img.icons8.com/color/24/000000/microsoft-outlook-2019--v2.png"/ > &nbsp Sign in with <b>Outlook</b></a>
+            <a href="/auth/outlook" class="btn btn-outline-primary btn-block "><img src="https://img.icons8.com/color/24/000000/microsoft-outlook-2019--v2.png" /> &nbsp Sign in with <b>Outlook</b></a>
             <a href="/auth/github" class="btn btn-outline-dark btn-block"><i class="fab fa-github"></i>&nbspSign in with <b>Github</b></a>
           </div>
 
