--- a/views/home.ejs
+++ b/views/home.ejs
@@ -119,33 +119,31 @@
     </div>
   </section>
   <section class="section-3">
-    <div class="container">
+    <div class="container-fluid" style="display:flex;align-items:center;justify-content:center;">
 
 
       <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <div class="col-lg-6 col-md-12" style = "margin-top:2rem">
           <div class="square">
             <span class="section-span1"></span>
             <span class="section-span2"></span>
             <span class="section-span3"></span>
-            <div class="content">
+            <div class="content1">
               <h2>About US</h2>
-              <p>Bayerische Motoren Werke AG, commonly referred to as BMW, is a German multinational company which produces luxury vehicles and motorcycles. The company was founded in 1916 as a manufacturer of
-                aircraft engines, which it produced from 1917 until 1918 and again from 1933 to 1945.</p>
+
               <button type="button" class="view_button">View</button>
             </div>
           </div>
 
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-lg-6 col-md-12" style="margin-top:2rem">
           <div class="square">
             <span class="section-span1"></span>
             <span class="section-span2"></span>
             <span class="section-span3"></span>
-            <div class="content">
+            <div class="content2">
               <h2>About Company</h2>
-              <p>Bayerische Motoren Werke AG, commonly referred to as BMW, is a German multinational company which produces luxury vehicles and motorcycles. The company was founded in 1916 as a manufacturer of
-                aircraft engines, which it produced from 1917 until 1918 and again from 1933 to 1945.</p>
+
               <button type="button" class="view_button">View</button>
             </div>
           </div>
