--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=700%, initial-scale=1.0">
+  <meta name="viewport" content="width=550%">
   <title></title>
   <link rel="stylesheet" href="css/style_main.css">
   <link rel="stylesheet" href="css/payment.css">
