--- a/views/main.ejs
+++ b/views/main.ejs
@@ -93,18 +93,36 @@
                 Staples
               </button>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab;">
-                <form action="/product" id = "item" method="post">
-                  <button class="dropdown-item" name = "name" value="Dal#0" type="submit">Dals</button>
-                  <button class="dropdown-item" name = "name" value="Oil#0" type="submit" >Oils</button>
-                  <button class="dropdown-item" name = "name" value="Flour#0" type="submit">Flours</button>
-                  <button class="dropdown-item" name = "name" value="Soya#0" type="submit">Soya</button>
-                  <button class="dropdown-item" name = "name" value="Ghee#0" type="submit">Ghee</button>
-                  <button class="dropdown-item" name = "name" value="Spices#0" type="submit">Spices</button>
-                  <button class="dropdown-item" name = "name" value="Masala#0" type="submit">Masalas</button>
-                  <button class="dropdown-item" name = "name" value="Rice#0" type="submit">Rice</button>
-                  <button class="dropdown-item" name = "name" value="Groundnut#0" type="submit">Groundnut</button>
-                  <button class="dropdown-item" name = "name" value="Atta#0" type="submit">Atta</button>
-                  <button class="dropdown-item" name = "name" value="Salt#0" type="submit">Salt</button>
+                <form action="/product" id="item" method="post">
+                  <button class="dropdown-item" name="name" value="Dal#0" type="submit">Dal</button>
+                  <button class="dropdown-item" name="name" value="Oil#0" type="submit">Oil</button>
+                  <button class="dropdown-item" name="name" value="Flour#0" type="submit">Flours</button>
+                  <button class="dropdown-item" name="name" value="Soya#0" type="submit">Soya</button>
+                  <button class="dropdown-item" name="name" value="Ghee#0" type="submit">Ghee</button>
+                  <button class="dropdown-item" name="name" value="Spices#0" type="submit">Spices</button>
+                  <button class="dropdown-item" name="name" value="Masala#0" type="submit">Masala</button>
+                  <button class="dropdown-item" name="name" value="Rice#0" type="submit">Rice</button>
+                  <button class="dropdown-item" name="name" value="Groundnut#0" type="submit">Groundnut</button>
+                  <button class="dropdown-item" name="name" value="Atta#0" type="submit">Atta</button>
+                  <button class="dropdown-item" name="name" value="Salt#0" type="submit">Salt</button>
+                </form>
+              </div>
+            </li>
+            <li class="nav-item dropdown" style="padding-right:1rem;">
+              <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
+                Personal & Baby Care
+              </button>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
+                <form action="/product" id="item" method="post">
+
+                  <button class="dropdown-item" name="name" value="Shampoo#1" type="submit">Shampoo</button>
+                  <button class="dropdown-item" name="name" value="Conditioner#1" type="submit">Conditioner</button>
+                  <button class="dropdown-item" name="name" value="Hair Oil#1" type="submit">Hair Oil</button>
+                  <button class="dropdown-item" name="name" value="Toothpaste#1" type="submit">Toothpaste</button>
+                  <button class="dropdown-item" name="name" value="Perfume#0" type="submit">Dals</button>
+                  <button class="dropdown-item" name="name" value="Toothbrush#1" type="submit">Dals</button>
+                  <button class="dropdown-item" name="name" value="Creams#1" type="submit">Creams</button>
+                  <button class="dropdown-item" name="name" value="Body Lotion#1" type="submit">Body Lotion</button>
                 </form>
               </div>
             </li>
@@ -130,23 +148,13 @@
             </li>
             <li class="nav-item dropdown" style="padding-right:1rem;">
               <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
-                Personal & Baby Care
-              </button>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-                <button class="dropdown-item" name = "name" value="dal" type="submit">Dals</button>
-                <button class="dropdown-item" name = "name" type="Oils">Oils</button>
-                <button class="dropdown-item" name = "name" type="submit">Flours</button>
-              </div>
-            </li>
-            <li class="nav-item dropdown" style="padding-right:1rem;">
-              <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
                 Household Care
               </button>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-                <form action="/item" id = "item" method="post">
-                  <button class="dropdown-item" name = "name" value="Shampoo" type="submit">Dals</button>
-                  <button class="dropdown-item" name = "name" type="" type="submit">Oils</button>
-                  <button class="dropdown-item" name = "name" type="submit" type="submit">Flours</button>
+                <form action="/item" id="item" method="post">
+                  <button class="dropdown-item" name="name" value="Shampoo" type="submit">Dals</button>
+                  <button class="dropdown-item" name="name" type="" type="submit">Oils</button>
+                  <button class="dropdown-item" name="name" type="submit" type="submit">Flours</button>
                 </form>
               </div>
             </li>
@@ -180,8 +188,8 @@
 
     </section>
 
-    <%for(let i = 0; i < 1  ;i++){ %>
-
+    <%for(let i = 0; i < 2  ;i++){ %>
+    <%= console.log(grocery_array)%>
     <section class="content_section">
       <div class="container-fluid">
         <div class="row ">
@@ -201,7 +209,7 @@
                     </div>
                     <div class="content">
                       <form action="/item" method="post">
-                        <button name = "product_name" value = "<%= grocery_array[i][j].name %>#<%=i%>" type="submit" style="position:absolute;left:1rem;bottom:1.5rem">more</button>
+                        <button name="product_name" value="<%= grocery_array[i][j].name %>#<%=i%>" type="submit" style="position:absolute;left:1rem;bottom:1.5rem">more</button>
                       </form>
                       <span style="position:absolute;right:1rem;bottom:1.5rem">
                         <h4 style="display:inline">₹<%= grocery_array[i][j].final_price%></h4> <del>
