--- a/views/main.ejs
+++ b/views/main.ejs
@@ -119,8 +119,8 @@
                   <button class="dropdown-item" name="name" value="Conditioner#1" type="submit">Conditioner</button>
                   <button class="dropdown-item" name="name" value="Hair Oil#1" type="submit">Hair Oil</button>
                   <button class="dropdown-item" name="name" value="Toothpaste#1" type="submit">Toothpaste</button>
-                  <button class="dropdown-item" name="name" value="Perfume#0" type="submit">Dals</button>
-                  <button class="dropdown-item" name="name" value="Toothbrush#1" type="submit">Dals</button>
+                  <button class="dropdown-item" name="name" value="Perfume#1" type="submit">Perfume</button>
+                  <button class="dropdown-item" name="name" value="Toothbrush#1" type="submit">Toothbrush</button>
                   <button class="dropdown-item" name="name" value="Creams#1" type="submit">Creams</button>
                   <button class="dropdown-item" name="name" value="Body Lotion#1" type="submit">Body Lotion</button>
                 </form>
