--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=500%">
+  <meta name="viewport" content="width=600%">
   <title></title>
   <link rel="stylesheet" href="css/style.css">
 
@@ -36,7 +36,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown" style="text-align:center;">
+      <div class="collapse navbar-collapse navbar-animate" id="navbarNavDropdown" style="text-align:center;">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#"><button type="button" class="btn1 nav-btn"><i class="fas fa-address-card" style="margin-right:10px;"></i>About</button></a>
@@ -51,18 +51,83 @@
       </div>
     </nav>
     <div class="container-fluid">
-      <div class="row name">
-        <div class="col">
-          Dheeru's Kart
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="row name">
+            <div class="col">
+              Dheeru's Kart
+            </div>
+          </div>
+          <div class="row tag-line">
+            <div class="col">
+              Hakuna Matata!
+            </div>
+
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="container-fluid cart" style="text-align:center;padding:10rem 0 0 0">
+            <label class="movement1" style="border-style:none;border-top:0.05rem solid;color:white;width:4rem;position:absolute;bottom:15rem;"></label>
+            <label class="movement2" style="border-style:none;border-top:0.05rem solid;color:white;width:4rem;position:absolute;bottom:8rem;"></label>
+            <label class="movement3" style="border-style:none;border-top:0.05rem solid;color:white;width:4rem;position:absolute;bottom:5rem;"></label>
+            <label class="movement4" style="border-style:none;border-top:0.05rem solid;color:white;width:4rem;position:absolute;bottom:11rem;"></label>
+            <svg width="476" height="360" viewBox="0 0 476 360" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="476" height="360" fill="#36096d"/>
+            <g id="wheel1">
+            <path id="wheel" d="M175.043 345.642C189.479 345.642 201.182 334.262 201.182 320.225C201.182 306.188 189.479 294.808 175.043 294.808C160.607 294.808 148.904 306.188 148.904 320.225C148.904 334.262 160.607 345.642 175.043 345.642Z" fill="#3F3D56"/>
+            <line id="Line 4" y1="-0.5" x2="20.8653" y2="-0.5" transform="matrix(-0.587495 -0.809228 0.824446 -0.565941 175.382 319.635)" stroke="white"/>
+            <line id="Line 5" y1="-0.5" x2="21.2541" y2="-0.5" transform="matrix(0.999025 -0.044158 0.0466925 0.998909 176.227 321.341)" stroke="white"/>
+            <line id="Line 3" y1="-0.5" x2="20.7251" y2="-0.5" transform="matrix(-0.317222 0.948351 -0.953448 -0.301556 175.007 321.341)" stroke="white"/>
+            </g>
+            <g id="item2">
+            <path id="Vector" d="M285.173 231.098C276.391 218.603 271.902 203.725 272.348 188.596C272.356 188.247 272.239 187.906 272.018 187.631C271.797 187.356 271.484 187.164 271.134 187.088V184.443H255.99V187.051H255.781C255.577 187.051 255.375 187.09 255.186 187.167C254.998 187.243 254.827 187.354 254.683 187.495C254.538 187.635 254.424 187.802 254.346 187.985C254.269 188.169 254.229 188.365 254.229 188.564C254.229 188.601 254.23 188.637 254.233 188.674C255.426 204.846 251.397 219.349 242.147 232.183C241.614 232.921 241.342 233.806 241.372 234.707L243.027 284.516C243.067 285.627 243.547 286.68 244.366 287.456C245.185 288.231 246.281 288.669 247.424 288.678H281.679C282.835 288.669 283.942 288.221 284.764 287.43C285.585 286.639 286.057 285.567 286.078 284.443L286.716 236.082C286.735 234.307 286.197 232.568 285.173 231.098V231.098Z" fill="#6C63FF"/>
+            <path id="Vector_2" d="M279.751 247.644H249.934C249.493 247.644 249.057 247.736 248.656 247.916C248.255 248.095 247.898 248.356 247.611 248.682C247.324 249.008 247.112 249.39 246.991 249.803C246.87 250.215 246.842 250.649 246.909 251.073L251.414 279.551H277.287L282.759 251.169C282.842 250.739 282.827 250.297 282.714 249.873C282.601 249.45 282.393 249.056 282.106 248.719C281.819 248.383 281.459 248.112 281.052 247.926C280.645 247.74 280.2 247.644 279.751 247.644V247.644Z" fill="white"/>
+            </g>
+            <g id="item3">
+            <path id="Vector_3" d="M365.036 290.153L295.25 242.157C318.786 219.862 340.194 188.117 360.666 152.223L430.453 200.219C402.567 231.015 378.945 261.237 365.036 290.153Z" fill="#6C63FF"/>
+            <path id="Vector_4" d="M365.056 239.053C376.431 239.053 385.653 230.086 385.653 219.025C385.653 207.963 376.431 198.996 365.056 198.996C353.68 198.996 344.459 207.963 344.459 219.025C344.459 230.086 353.68 239.053 365.056 239.053Z" fill="white"/>
+            </g>
+            <g id="wheel2">
+            <path id="wheel_2" d="M370.214 345.642C384.65 345.642 396.353 334.262 396.353 320.225C396.353 306.188 384.65 294.808 370.214 294.808C355.778 294.808 344.075 306.188 344.075 320.225C344.075 334.262 355.778 345.642 370.214 345.642Z" fill="#3F3D56"/>
+            <line id="Line 7" y1="-0.5" x2="20.864" y2="-0.5" transform="matrix(-0.587461 -0.809252 0.82447 -0.565906 372.335 320.347)" stroke="white"/>
+            <line id="Line 8" y1="-0.5" x2="21.2505" y2="-0.5" transform="matrix(0.996116 -0.0880551 0.0930851 0.995658 372.335 320.347)" stroke="#E6E6E6"/>
+            <line id="Line 9" y1="-0.5" x2="20.7463" y2="-0.5" transform="matrix(-0.371337 0.928498 -0.935357 -0.353705 370.292 319.354)" stroke="white"/>
+            </g>
+            <g id="item1">
+            <path id="Vector_5" d="M229.897 290.246H144.419C150.395 258.828 149.02 220.89 144.419 180.09H229.897C225.418 220.89 224.08 258.828 229.897 290.246Z" fill="#6C63FF"/>
+            <path id="Vector_6" d="M187.673 252.021C199.048 252.021 208.27 243.054 208.27 231.993C208.27 220.931 199.048 211.964 187.673 211.964C176.297 211.964 167.076 220.931 167.076 231.993C167.076 243.054 176.297 252.021 187.673 252.021Z" fill="white"/>
+            </g>
+            <g id="body">
+            <path id="Vector_7" d="M277.883 69.4435H274.398V290.771H277.883V69.4435Z" fill="#e3dfc8"/>
+            <path id="Vector_8" d="M401.857 291.764H137.644L91.0257 67.7491H445.605C447.414 67.7493 449.202 68.1305 450.845 68.8667C452.489 69.6028 453.948 70.6763 455.124 72.0134C456.3 73.3504 457.165 74.9193 457.657 76.6121C458.15 78.3048 458.261 80.0814 457.98 81.8194L414.23 281.475C413.779 284.348 412.281 286.967 410.01 288.855C407.739 290.744 404.845 291.776 401.857 291.764V291.764ZM140.513 288.375H401.857C404.014 288.384 406.102 287.639 407.741 286.276C409.38 284.913 410.461 283.022 410.786 280.949L454.536 81.2933C454.739 80.0388 454.659 78.7565 454.304 77.5346C453.948 76.3127 453.325 75.1803 452.476 74.2152C451.627 73.2501 450.573 72.4753 449.387 71.9441C448.201 71.4128 446.911 71.1379 445.605 71.138H95.2562L140.513 288.375Z" fill="#96bb7c"/>
+            <path id="Vector_9" d="M422.384 233.438L126.004 235.408L126.028 238.797L422.408 236.827L422.384 233.438Z" fill="#96bb7c"/>
+            <path id="Vector_10" d="M108.829 128.75L108.82 132.139L446.182 132.933L446.19 129.544L108.829 128.75Z" fill="#96bb7c"/>
+            <path id="Vector_11" d="M33.8927 35.5541C44.4792 35.5541 53.0612 31.0023 53.0612 25.3873C53.0612 19.7724 44.4792 15.2206 33.8927 15.2206C23.3062 15.2206 14.7241 19.7724 14.7241 25.3873C14.7241 31.0023 23.3062 35.5541 33.8927 35.5541Z" fill="#96bb7c"/>
+            <path id="Vector_12" d="M358.763 289.348L355.321 288.806L384.959 69.1722L388.4 69.7145L358.763 289.348Z" fill="#96bb7c"/>
+            <path id="Vector_13" d="M189.007 291.047L158.478 69.7195L161.916 69.1673L192.445 290.495L189.007 291.047Z" fill="#96bb7c"/>
+            <path id="Vector_14" d="M406.808 297.35H135.247L77.7417 33.0123H28.6646V21.1517H87.6288L145.134 285.489H406.808V297.35Z" fill="#eebb4d"/>
+            </g>
+            <g id="undraw_shopping_app_flsj 1" filter="url(#filter0_d)">
+            <rect x="4.5" y="0.5" width="467" height="351" />
+            </g>
+            <defs>
+            <filter id="filter0_d" x="0" y="0" width="476" height="360" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="4"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+            </filter>
+            </defs>
+            </svg>
+
+          </div>
         </div>
 
       </div>
-      <div class="row tag-line">
-        <div class="col">
-          Hakuna Matata!
-        </div>
 
-      </div>
 
     </div>
     <!-- <div class="container-fluid">
@@ -123,7 +188,7 @@
 
 
       <div class="row">
-        <div class="col-lg-6 col-md-12" style = "margin-top:2rem">
+        <div class="col-lg-6 col-md-12" style="margin-top:2rem">
           <div class="square">
             <span class="section-span1"></span>
             <span class="section-span2"></span>
