--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=600%">
+  <meta name="viewport" content="width=device-width">
   <title></title>
   <link rel="stylesheet" href="css/style.css">
 
