--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,10 +67,10 @@
         </div>
         <div class="col-lg-6">
           <div class="container-fluid cart" style="text-align:center;padding:10rem 0 0 0">
-            <label class="movement1" style="border-style:none;border-top:0.05rem solid;color:white;width:4rem;position:absolute;bottom:15rem;"></label>
-            <label class="movement2" style="border-style:none;border-top:0.05rem solid;color:white;width:4rem;position:absolute;bottom:8rem;"></label>
-            <label class="movement3" style="border-style:none;border-top:0.05rem solid;color:white;width:4rem;position:absolute;bottom:5rem;"></label>
-            <label class="movement4" style="border-style:none;border-top:0.05rem solid;color:white;width:4rem;position:absolute;bottom:11rem;"></label>
+            <label class="movement1" style="border-style:none;border-top:0.8px solid;color:white;width:64px;position:absolute;bottom:15rem;"></label>
+            <label class="movement2" style="border-style:none;border-top:0.8px solid;color:white;width:64px;position:absolute;bottom:8rem;"></label>
+            <label class="movement3" style="border-style:none;border-top:0.8px solid;color:white;width:64px;position:absolute;bottom:5rem;"></label>
+            <label class="movement4" style="border-style:none;border-top:0.8px solid;color:white;width:64px;position:absolute;bottom:11rem;"></label>
             <svg width="476" height="360" viewBox="0 0 476 360" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect width="476" height="360" fill="#36096d"/>
             <g id="wheel1">
