--- a/public/css/style.css
+++ b/public/css/style.css
@@ -504,12 +504,12 @@ wave3 {
 
 @keyframes movement1{
     0%{ opacity: 0.5;
-        transform: rotate(0) translateX(-10rem);
+        transform: rotate(0) translateX(-160px);
         width: 64px;
         border: 0.005rem solid white;
         }
     100%{
-        transform: rotate(0) translateX(33rem);
+        transform: rotate(0) translateX(528px);
         opacity: 0.5;
         width: 64px;
         border: 0.005rem solid white;
@@ -522,12 +522,12 @@ wave3 {
 
 @keyframes movement2{
     0%{ opacity: 0.5;
-        transform: rotate(0) translateX(-9rem);
+        transform: rotate(0) translateX(-144px);
         width: 64px;
         border: 0.005rem solid white;
         }
     100%{
-        transform: rotate(0) translateX(33rem);
+        transform: rotate(0) translateX(528px);
         width: 64px;
         opacity: 0.5;
         border: 0.05rem solid white;
@@ -540,12 +540,12 @@ wave3 {
 
 @keyframes movement3,movement4{
     0%{ opacity: 0.5;
-        transform: rotate(0) translateX(-10rem);
+        transform: rotate(0) translateX(-160px);
         width: 64px;
         border: 0.005rem solid white;
         }
     100%{
-        transform: rotate(0) translateX(33rem);
+        transform: rotate(0) translateX(528px);
         opacity: 0.5;
         width: 64px;
         border: 0.005rem solid white;
