--- a/public/css/style.css
+++ b/public/css/style.css
@@ -506,13 +506,13 @@ wave3 {
     0%{ opacity: 0.5;
         transform: rotate(0) translateX(-160px);
         width: 64px;
-        border: 0.005rem solid white;
+        border: 0.8px solid white;
         }
     100%{
         transform: rotate(0) translateX(528px);
         opacity: 0.5;
         width: 64px;
-        border: 0.005rem solid white;
+        border: 0.8px solid white;
         }
 }
 
@@ -524,13 +524,13 @@ wave3 {
     0%{ opacity: 0.5;
         transform: rotate(0) translateX(-144px);
         width: 64px;
-        border: 0.005rem solid white;
+        border: 0.8px solid white;
         }
     100%{
         transform: rotate(0) translateX(528px);
         width: 64px;
         opacity: 0.5;
-        border: 0.05rem solid white;
+        border: 0.8px solid white;
         }
 }
 
@@ -542,13 +542,13 @@ wave3 {
     0%{ opacity: 0.5;
         transform: rotate(0) translateX(-160px);
         width: 64px;
-        border: 0.005rem solid white;
+        border: 0.8px solid white;
         }
     100%{
         transform: rotate(0) translateX(528px);
         opacity: 0.5;
         width: 64px;
-        border: 0.005rem solid white;
+        border: 0.8px solid white;
         }
 }
 
