--- a/views/item.ejs
+++ b/views/item.ejs
@@ -71,18 +71,37 @@
             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
               Staples
             </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab;">
+              <form action="/product" id="item" method="post">
+                <button class="dropdown-item" name="name" value="Dal#0" type="submit">Dal</button>
+                <button class="dropdown-item" name="name" value="Oil#0" type="submit">Oil</button>
+                <button class="dropdown-item" name="name" value="Flour#0" type="submit">Flours</button>
+                <button class="dropdown-item" name="name" value="Soya#0" type="submit">Soya</button>
+                <button class="dropdown-item" name="name" value="Ghee#0" type="submit">Ghee</button>
+                <button class="dropdown-item" name="name" value="Spices#0" type="submit">Spices</button>
+                <button class="dropdown-item" name="name" value="Masala#0" type="submit">Masala</button>
+                <button class="dropdown-item" name="name" value="Rice#0" type="submit">Rice</button>
+                <button class="dropdown-item" name="name" value="Groundnut#0" type="submit">Groundnut</button>
+                <button class="dropdown-item" name="name" value="Atta#0" type="submit">Atta</button>
+                <button class="dropdown-item" name="name" value="Salt#0" type="submit">Salt</button>
+              </form>
+            </div>
+          </li>
+          <li class="nav-item dropdown" style="padding-right:1rem;">
+            <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
+              Personal & Baby Care
+            </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-              <form action="/product" id = "item" method="post">
-                <button class="dropdown-item" name = "name" value="Dal#0" type="submit">Dals</button>
-                <button class="dropdown-item" name = "name" value="Oil#0" type="submit">Oils</button>
-                <button class="dropdown-item" name = "name" value="Flour#0" type="submit">Flours</button>
-                <button class="dropdown-item" name = "name" value="Soya#0" type="submit">Soya</button>
-                <button class="dropdown-item" name = "name" value="Ghee#0" type="submit">Ghee</button>
-                <button class="dropdown-item" name = "name" value="Spices#0" type="submit">Spices</button>
-                <button class="dropdown-item" name = "name" value="Masala#0" type="submit">Masalas</button>
-                <button class="dropdown-item" name = "name" value="Rice#0" type="submit">Rice</button>
-                <button class="dropdown-item" name = "name" value="Groundnut#0" type="submit">Groundnut</button>
-                <button class="dropdown-item" name = "name" value="Atta#0" type="submit">Atta</button>
+              <form action="/product" id="item" method="post">
+
+                <button class="dropdown-item" name="name" value="Shampoo#1" type="submit">Shampoo</button>
+                <button class="dropdown-item" name="name" value="Conditioner#1" type="submit">Conditioner</button>
+                <button class="dropdown-item" name="name" value="Hair Oil#1" type="submit">Hair Oil</button>
+                <button class="dropdown-item" name="name" value="Toothpaste#1" type="submit">Toothpaste</button>
+                <button class="dropdown-item" name="name" value="Perfume#1" type="submit">Perfume</button>
+                <button class="dropdown-item" name="name" value="Toothbrush#1" type="submit">Toothbrush</button>
+                <button class="dropdown-item" name="name" value="Cream#1" type="submit">Creams</button>
+                <button class="dropdown-item" name="name" value="Body Lotion#1" type="submit">Body Lotion</button>
               </form>
             </div>
           </li>
@@ -108,23 +127,13 @@
           </li>
           <li class="nav-item dropdown" style="padding-right:1rem;">
             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
-              Personal & Baby Care
-            </button>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-              <button class="dropdown-item" name = "name" value="dal" type="submit">Dals</button>
-              <button class="dropdown-item" name = "name" type="Oils">Oils</button>
-              <button class="dropdown-item" name = "name" type="submit">Flours</button>
-            </div>
-          </li>
-          <li class="nav-item dropdown" style="padding-right:1rem;">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
               Household Care
             </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-              <form action="/item" id = "item" method="post">
-                <button class="dropdown-item" name = "name" value="Shampoo" type="submit">Dals</button>
-                <button class="dropdown-item" name = "name" type="" type="submit">Oils</button>
-                <button class="dropdown-item" name = "name" type="submit" type="submit">Flours</button>
+              <form action="/item" id="item" method="post">
+                <button class="dropdown-item" name="name" value="Shampoo" type="submit">Dals</button>
+                <button class="dropdown-item" name="name" type="" type="submit">Oils</button>
+                <button class="dropdown-item" name="name" type="submit" type="submit">Flours</button>
               </form>
             </div>
           </li>
