--- a/views/main.ejs
+++ b/views/main.ejs
@@ -121,7 +121,7 @@
                   <button class="dropdown-item" name="name" value="Toothpaste#1" type="submit">Toothpaste</button>
                   <button class="dropdown-item" name="name" value="Perfume#1" type="submit">Perfume</button>
                   <button class="dropdown-item" name="name" value="Toothbrush#1" type="submit">Toothbrush</button>
-                  <button class="dropdown-item" name="name" value="Creams#1" type="submit">Creams</button>
+                  <button class="dropdown-item" name="name" value="Cream#1" type="submit">Creams</button>
                   <button class="dropdown-item" name="name" value="Body Lotion#1" type="submit">Body Lotion</button>
                 </form>
               </div>
